--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -22,7 +22,15 @@ import illustration from "../assets/img/exam-illustration.svg";
                 </div>
               </div>
             </div>
-            <div class="col-8">
+            <div class="col-6">
+              <div class="header-top__login">
+                <div class="theme-switch">
+                  <input type="checkbox" id="themer" />
+                  <label for="themer">Dark mode</label>
+                </div>
+              </div>
+            </div>
+            <div class="col-2">
               <div class="header-top__login">
                 <Button size="sm" style="primary">Login</Button>
               </div>
